@@ -1,4 +1,4 @@
 FROM openjdk:8-jre-alpine
 WORKDIR /app
 COPY build/libs .
-ENTRYPOINT ["java", "-jar", "boston-pipeline.jar"]
+ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-jar", "boston-pipeline.jar"]
